erDiagram
    SPELLS ||--o{ SPELL_CLASS_MAP : "available to"
    CLASSES ||--o{ SPELL_CLASS_MAP : "can cast"
    SPELLS ||--|| SPELL_COMPONENTS : "requires"
    SCHOOLS ||--o{ SPELLS : "categorizes"
    CASTING_TIMES ||--o{ SPELLS : "defines"
    DURATIONS ||--o{ SPELLS : "defines"

    SPELLS {
        int spell_id PK
        string name
        int level
        int school_id FK
        int casting_time_id FK
        string range_desc
        int duration_id FK
        bool is_ritual
        text description
        text upcast_desc
    }

    SCHOOLS {
        int school_id PK
        string name
    }

    CLASSES {
        int class_id PK
        string name
    }

    CASTING_TIMES {
        int time_id PK
        string name
    }

    DURATIONS {
        int duration_id PK
        string name
        bool is_concentration
    }

    SPELL_CLASS_MAP {
        int spell_id FK "PK"
        int class_id FK "PK"
    }

    SPELL_COMPONENTS {
        int spell_id FK "PK"
        bool has_verbal
        bool has_somatic
        string material_desc
        decimal material_cost_gp
        bool is_consumed
    }
